--- a/www.parliament.nz/58a6258458e37e1c93ede3e20020085dcf484ba9.html
+++ b/www.parliament.nz/58a6258458e37e1c93ede3e20020085dcf484ba9.html
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfjqr_10153180914150608.js" data-dtconfig="rid=RID_514311158|rpid=2140919770|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|srms=1;1;;;|bp2=1|featureHash=ICA2SVfjqr|dpvc=1|lastModification=1538098718173|dtVersion=10153180914150608|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfjqr_10153180914150608.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+	<script type="text/javascript" src="/ruxitagentjs_ICA2SVfjqr_10153180914150608.js" data-dtconfig="rid=RID_514311158|rpid=139119628|domain=www.parliament.nz|reportUrl=/rb_bf57368wpr|srms=1;1;;;|bp2=1|featureHash=ICA2SVfjqr|dpvc=1|lastModification=1538098718173|dtVersion=10153180914150608|tp=500,50,0,1|rdnt=1|agentUri=/ruxitagentjs_ICA2SVfjqr_10153180914150608.js"></script><link href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<!--[if (gt IE 9) | (IEMobile)]><!-->
 	<link rel="stylesheet" type="text/css" href="/content/css/style.EFJhYg.css">
 	<!--<![endif]-->
@@ -606,6 +606,36 @@
 									<li class="header__mobile-footer-nav-item">
 										<a href="/en/footer/about-us/" target="_top" class="header__mobile-footer-nav-link" title="About Us">About Us</a>
 									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="header__mobile-footer-nav-link" title="Glossary">Glossary</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/faqs/" target="_top" class="header__mobile-footer-nav-link" title="FAQs">FAQs</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/jobs/" class="header__mobile-footer-nav-link" title="Careers">Careers</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/contact-us/" target="_top" class="header__mobile-footer-nav-link" title="Contact us">Contact us</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/accessibility/" target="_top" class="header__mobile-footer-nav-link" title="Accessibility">Accessibility</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/copyright/" class="header__mobile-footer-nav-link" title="Copyright">Copyright</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/privacy/" target="_top" class="header__mobile-footer-nav-link" title="Privacy">Privacy</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/alerts/" target="_top" class="header__mobile-footer-nav-link" title="Alerts">Alerts</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/footer/website-help/" class="header__mobile-footer-nav-link" title="Website Help">Website Help</a>
+									</li>
+									<li class="header__mobile-footer-nav-item">
+										<a href="/en/sitemap/" target="_blank" class="header__mobile-footer-nav-link" title="Sitemap">Sitemap</a>
+									</li>
 							</ul>
 						</div>
 				</div>
@@ -861,7 +891,7 @@
 <div class="figure figure--video js-video-player one-whole">
 		<div class="figure__container">
 			<a href="http://www.youtube.com/watch?v=hXX6Q9SSdA8" 
-			   id="video77164" 
+			   id="video80428" 
 			   data-video-id="hXX6Q9SSdA8" 
 			   class="js-video js-video-pane video-pane" 
 			   data-autoplay="true" 
@@ -1281,6 +1311,56 @@
 					<li class="footer__nav-item">
 						<a href="/en/footer/about-us/" target="_top" class="footer__nav-link" title="About Us">
 							About Us
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/visit-and-learn/how-parliament-works/glossary/" class="footer__nav-link" title="Glossary">
+							Glossary
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/faqs/" target="_top" class="footer__nav-link" title="FAQs">
+							FAQs
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/jobs/" class="footer__nav-link" title="Careers">
+							Careers
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/contact-us/" target="_top" class="footer__nav-link" title="Contact us">
+							Contact us
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/accessibility/" target="_top" class="footer__nav-link" title="Accessibility">
+							Accessibility
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/copyright/" class="footer__nav-link" title="Copyright">
+							Copyright
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/privacy/" target="_top" class="footer__nav-link" title="Privacy">
+							Privacy
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/alerts/" target="_top" class="footer__nav-link" title="Alerts">
+							Alerts
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/footer/website-help/" class="footer__nav-link" title="Website Help">
+							Website Help
+						</a>
+					</li>
+					<li class="footer__nav-item">
+						<a href="/en/sitemap/" target="_blank" class="footer__nav-link" title="Sitemap">
+							Sitemap
 						</a>
 					</li>
 			</ul>
